Feat : user can now complete a task

--- a/client/src/components/TaskCard/TaskCard.module.css
+++ b/client/src/components/TaskCard/TaskCard.module.css
@@ -12,6 +12,11 @@
   align-items: center;
   justify-content: space-between;
 }
+.title-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
 .deadline {
   display: flex;
   align-items: center;
